--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -8,16 +8,16 @@
                     </li>
                     <div class="menu">
                         <li>
-                            <a routerLinkActive="active" routerLink="/home">Home <i class="oi oi-home float-right"></i></a>
+                            <a routerLinkActive="active" routerLink="/home">Inicio <i class="oi oi-home float-right"></i></a>
                         </li>
                         <li>
-                            <a routerLinkActive="active" routerLink="/prueba" >Try<i class="oi oi-pie-chart float-right"></i></a>
+                            <a routerLinkActive="active" routerLink="/prueba" >Estadísticas<i class="oi oi-pie-chart float-right"></i></a>
                         </li>                    
                         <li>
-                            <a routerLinkActive="active" routerLink="/config" >Configuration<i class="oi oi-cog float-right"></i></a>
+                            <a routerLinkActive="active" routerLink="/config" >Configuracion<i class="oi oi-cog float-right"></i></a>
                         </li>                   
                         <li>
-                            <a href="#">Log Out<i class="oi oi-power-standby float-right"></i></a>
+                            <a href="#">Salir<i class="oi oi-power-standby float-right"></i></a>
                         </li>
                     </div>                    
                 </ul>
