--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -5,7 +5,7 @@
         <h3 class="blanco titulo">Iniciar sesión</h3>
         <form class="login" (keydown)="keyDownLogin($event, name, pass)">
           <div class="input-group mb-3">
-            <input type="text" class="form-control-plaintext blanco" placeholder="Usuario" name="name" [(ngModel)]="name">
+            <input type="text" class="form-control-plaintext blanco" placeholder="Usuario" name="email" [(ngModel)]="email">
             <span class="input-group-addon spanIcon">
               <i class="oi oi-person iconlogin blanco" id="icono"></i>
             </span>
@@ -17,7 +17,7 @@
             </span>
           </div>
           <div class="text-center">
-            <button type="button" class="btn" (click)="loggear(name, pass)">Iniciar</button>
+            <button type="button" class="btn" (click)="loggear(email, pass)">Iniciar</button>
           </div>
         </form>
       </div>
