--- a/src/app/menu/config/config.component.scss
+++ b/src/app/menu/config/config.component.scss
@@ -8,6 +8,9 @@ main {
   margin-left: -30px;
   font-size: 12px;
 
+  #formControlFile {
+    margin-top: 1rem;
+  }
   .addBtn {
     width: 50px;
     height: 50px;
