--- a/src/app/main/config/config.component.html
+++ b/src/app/main/config/config.component.html
@@ -1,5 +1,4 @@
 <div class="row" style="margin-left: 0px; margin-right: 0px;">
-  <app-menu></app-menu>
   <main role="main" class="col">
     <div id="datosUser" class="boxContainer shadow">
       <div class="row">
@@ -128,8 +127,8 @@
         <p>¿Estás seguro?</p>   
     </body>
     <footer class="modalFooter">
-          <button type="button" class="btn btn-primary modalBtn" (click)="doAcction('true')">Si</button>
-          <button type="button" class="btn btn-danger modalBtn" (click)="doAcction('false')">No</button> 
+          <button type="button" class="btn btn-primary modalBtn" (click)="doAcction(true)">Si</button>
+          <button type="button" class="btn btn-danger modalBtn" (click)="doAcction(false)">No</button> 
     </footer>
   </ngx-smart-modal>
   
