--- a/src/app/main/stats/stats.component.html
+++ b/src/app/main/stats/stats.component.html
@@ -1,10 +1,3 @@
 <div class="row" style="margin-left: 0px; margin-right: 0px;">
-
-
-  <app-menu></app-menu>
-
-  
-    <p>
-      prueba works!
-    </p>
+    <div class="boxContainer shadow">HOLA QUE PASA stats</div>
 </div>
