--- a/src/app/main/menu/menu.component.scss
+++ b/src/app/main/menu/menu.component.scss
@@ -1,7 +1,7 @@
 @import url(http://fonts.googleapis.com/?family=Lato);
-@import "../../css/_variables.scss";
+@import "../../../css/_variables.scss";
 @import "~bootstrap/scss/bootstrap-grid.scss";
-@import "../../css/_flexbox.scss";
+@import "../../../css/_flexbox.scss";
 
 
 
