--- a/src/app/main/config/config.component.html
+++ b/src/app/main/config/config.component.html
@@ -3,11 +3,11 @@
     <div id="datosUser" class="boxContainer shadow">
       <div class="row">
         <div class="col-xs-12 col-md-6">
-          <h4>{{ users[0].name }}</h4>
-          <h4>{{ users[0].email }}</h4>
+          <h4>{{ identity.name }}</h4>
+          <h4>{{ identity.email }}</h4>
         </div>
         <div class="col-xs-12 col-md-6" id="userAvatar">
-          <img [src]= "users[0].avatar">
+          <img [src]= "identity.avatar">
           <input type="file" class="form-control-file" id="formControlFile">
         </div>  
       </div>
