--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,41 +2,111 @@
   <div class="row justify-content-md-center">
     <div class="jumbotron col-10 col-md-6 col-lg-4 align-self-center sombra">
       <div class="text-center">
-        <h3 class="blanco titulo">Iniciar sesión</h3>
-        <div class="alert alert-danger text-left" *ngIf="!email.valid && email.touched || !password.valid && password.touched">
-          Datos Incorrectos
-          <ul>
-            <li *ngIf="!email.valid && email.touched">Debe introducir el email, y éste debe ser correcto</li>
-            <li *ngIf="!password.valid && password.touched">Debe introducir una contraseña</li>
-          </ul>
-        </div>
+        <button (click)="changeStatus()" class="menubtn col-6" id="loginbtn">Entrar</button>
+        <button (click)="changeStatus()" class="menubtn col-6" >Registrarse</button>
+        <h3 class="white tittle">GastosApp</h3>
+        
+        <ng-container 
+          *ngIf="statusLogin; then login; else register">          
+        </ng-container>
 
-        <div class="alert alert-danger text-left" *ngIf="isError">
-          Error. {{errorMessage}}
-        </div>
+        <ng-template #login>
+          <ng-container>
+              <form #loginForm="ngForm" (ngSubmit)="onSubmit()" class="login">
+                  <div class="input-group mb-3">
+                    <input #email="ngModel" [(ngModel)]="user.email" name="email" type="email" class="form-control-plaintext white" placeholder="Usuario"
+                      required pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$">
+                    <span class="input-group-addon spanIcon">
+                      <i class="oi oi-envelope-closed iconlogin white" id="icono"></i>
+                    </span>
+                  </div>
+          
+                  <div class="input-group mb-3">
+                    <input #password="ngModel" [(ngModel)]="user.password" name="password" type="password" class="form-control-plaintext white"
+                      placeholder="Contraseña" required>
+                    <span class="input-group-addon spanIcon">
+                      <i class="oi oi-key iconlogin white" id="icono"></i>
+                    </span>
+                  </div>
+          
+                  <div class="text-center">
+                    <input type="submit" class="btn" value="Entrar" [disabled]="!loginForm.form.valid" />
+                  </div>
+                </form>
 
-        <form #loginForm="ngForm" (ngSubmit)="onSubmit()" class="login">
-          <div class="input-group mb-3">
-            <input #email="ngModel" [(ngModel)]="user.email" name="email" type="email" class="form-control-plaintext blanco" placeholder="Usuario"
-              required pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$">
-            <span class="input-group-addon spanIcon">
-              <i class="oi oi-person iconlogin blanco" id="icono"></i>
-            </span>
-          </div>
+                <div class="alert alert-danger text-left" *ngIf="!email.valid && email.touched || !password.valid && password.touched">
+                    Datos Incorrectos
+                    <ul>
+                      <li *ngIf="!email.valid && email.touched">Debe introducir el email, y éste debe ser correcto</li>
+                      <li *ngIf="!password.valid && password.touched">Debe introducir una contraseña</li>
+                    </ul>
+                  </div>
+          
+                  <div class="alert alert-danger text-left" *ngIf="isError">
+                    Error. {{errorMessage}}
+                  </div>
 
-          <div class="input-group mb-3">
-            <input #password="ngModel" [(ngModel)]="user.password" name="password" type="password" class="form-control-plaintext blanco"
-              placeholder="Contraseña" required>
-            <span class="input-group-addon spanIcon">
-              <i class="oi oi-lock-locked iconlogin blanco" id="icono"></i>
-            </span>
-          </div>
+          </ng-container>          
+        </ng-template>
+        <ng-template #register>
+            <ng-container>
+                <form #registerForm="ngForm" (ngSubmit)="onRegister()" class="login">
+                  <div class="input-group mb-3">
+                      <input #name="ngModel" [(ngModel)]="user.name" name="username" type="text" class="form-control-plaintext white" placeholder="Nombre" required>
+                    <span class="input-group-addon spanIcon">
+                      <i class="oi oi-person iconlogin white" id="icono"></i>
+                    </span>
+                  </div>
+                  <div class="input-group mb-3">
+                    <input #email="ngModel" [(ngModel)]="user.email" name="email" type="email" class="form-control-plaintext white" placeholder="Correo electrónico"
+                      required pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$">
+                    <span class="input-group-addon spanIcon">
+                      <i class="oi oi-envelope-closed iconlogin white" id="icono"></i>
+                    </span>
+                  </div>
+          
+                  <div class="input-group mb-3">
+                    <input #password="ngModel" [(ngModel)]="user.password" name="password" type="password" class="form-control-plaintext white"
+                      placeholder="Contraseña" required>
+                    <span class="input-group-addon spanIcon">
+                      <i class="oi oi-key iconlogin white" id="icono"></i>
+                    </span>
+                  </div>
 
-          <div class="text-center">
-            <input type="submit" class="btn" value="Entrar" [disabled]="!loginForm.form.valid" />
-          </div>
-        </form>
+                  <div class="input-group mb-3">
+                      <input #confirmpassword="ngModel" [(ngModel)]="password2" name="password2" type="password" class="form-control-plaintext white"
+                        placeholder="Repetir contraseña" required>
+                      <span class="input-group-addon spanIcon">
+                        <i class="oi oi-key iconlogin white" id="icono"></i>
+                      </span>
+                    </div>
+          
+                  <div class="text-center">
+                    <input type="submit" class="btn" value="Registrarme" [disabled]="!registerForm.form.valid" />
+                  </div>
+                </form>
 
+                <div class="alert alert-danger text-left" *ngIf="!email.valid && email.touched || password2 != password && password2.touched">
+                    Datos Incorrectos
+                    <ul>
+                      <li *ngIf="!email.valid && email.touched">Debe introducir el email, y éste debe ser válido</li>
+                      <li *ngIf="!password.valid && password.touched">Debe introducir una contraseña</li>
+                      <li *ngIf="password2 != password.valid">Las contraseñas deben coincidir</li>
+                    </ul>
+                  </div>
+          
+                  <div class="alert alert-danger text-left" *ngIf="isError">
+                    Error. {{errorMessage}}
+                  </div>
+            </ng-container>                 
+        </ng-template>   
+              
+        <ngx-spinner
+          bdColor = "rgba(51, 51, 51, 0.8)"
+          size = "default"
+          color = "#fff"
+          type = "square-jelly-box">
+        </ngx-spinner>
       </div>
     </div>
   </div>
