--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -16,6 +16,7 @@
 @include media-breakpoint-down(md){
     .content{
         margin: 0 auto !important;
+        margin-left: -30px !important;
     }
     
 }
