--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -9,7 +9,7 @@
     -webkit-transform: translateX(-50%) translateY(-50%);
     transform: translateX(-50%) translateY(-50%);
     border-radius: 0px !important;
-    padding-bottom: 27px;
+    padding: 0;
 }
 
 .tittle{
@@ -19,7 +19,7 @@
 }
 
 .fondologin {
-    background-image: url("/assets/fondologin.jpg");
+    background-image: url("/assets/backgroundlogin.jpg");
     background-repeat: no-repeat, repeat;
     background-size: cover;
     position: absolute;
@@ -72,7 +72,28 @@ padding: 0.5rem;
     border: none;
 
     &.active{
-        text-decoration: underline;
         font-weight: bold;
     }
+}
+
+#btnPanel{
+
+    button{
+        padding: 1rem;
+        background-color: $loginGrey;
+        border-bottom: 1px solid $thirdGrey;
+        &.active{
+            background: transparent;
+            border-bottom: none;
+        }
+        &:focus{
+            outline: none;
+        }
+    }
+}
+
+#formPanel{
+    padding-left: 2rem;
+    padding-right: 2rem;
+    padding-bottom: 2rem;
 }
