--- a/src/css/_variables.scss
+++ b/src/css/_variables.scss
@@ -3,5 +3,6 @@ $primaryOrange : #f3a117;
 $primaryGrey: rgb(110, 125, 140);
 $secondaryGrey: rgba(64, 89, 114, 0.7);
 $thirdGrey: rgb(49, 70, 91);
+$loginGrey: rgba(49, 70, 91, 0.7);
 $detailsGrey: #e9e6e6;
 $detailsGreen: #50b648;
