--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -4,7 +4,7 @@
      background-image: url("/assets/backgroundmain.jpg");
      background-repeat: no-repeat, repeat;
      background-size: cover;
-    //  position: absolute;
+     position: absolute;
      background-attachment: fixed;
      width: 100%;   
      height: 100%;
