--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -1,13 +1,13 @@
 @import "~bootstrap/scss/bootstrap-grid.scss";
 
 .row{
-     background-image: url("/assets/backgroundmain.jpg");
-     background-repeat: no-repeat, repeat;
-     background-size: cover;
-    //  position: absolute;
-     background-attachment: fixed;
-     width: 100%;   
-     height: 100%;
+    background-image: url("/assets/backgroundmain.jpg");
+    background-repeat: no-repeat, repeat;
+    background-size: cover;
+    position: absolute;
+    background-attachment: fixed;
+    width: 100%;   
+    height: 100%;
 }
 
 .content.active
