--- a/src/app/main/config/config.component.html
+++ b/src/app/main/config/config.component.html
@@ -8,7 +8,7 @@
         </div>
         <div class="col-xs-12 col-md-6" id="userAvatar">
           <img [src]= "identity.avatar">
-          <input type="file" class="form-control-file" id="formControlFile">
+          <input type="file" (change)="handleFileInput($event.target.files)" class="form-control-file" id="formControlFile">
         </div>  
       </div>
     </div>
@@ -105,7 +105,6 @@
           placeholder="Nombre categoria" 
           required>
         <select class="form-control"  id="father" [(ngModel)]="newFather" name="newFather" aria-placeholder="Selec Category">
-          <option > Categoría principal</option>
           <option *ngFor="let category of categories" [ngValue]="category">{{ category.name }}</option>
         </select>                                            
       </form>
