--- a/src/app/main/config/config.component.scss
+++ b/src/app/main/config/config.component.scss
@@ -10,11 +10,13 @@ main {
   #formControlFile {
     margin-top: 1rem;
   }
+  
   .addBtn {
     width: 50px;
     height: 50px;
     background-color: white;
     border-radius: 50%;
+    margin-left: 8px;
 
     &:hover {
       background-color: $detailsGreen;
@@ -43,7 +45,7 @@ main {
       }
     }
 
-    .btn {
+    .btnAcc {
       float: right;
       background: transparent;
     }
@@ -152,9 +154,13 @@ main {
 
 .modalBody {
   padding: 1rem;
+  height: auto;
 
   .btn-outline-secondary {
     min-width: 80px;
+  }
+  .btn-outline-secondary:hover {
+    color: white !important;
   }
   select {
     margin-top: 1rem;
@@ -162,9 +168,11 @@ main {
 }
 
 .modalFooter {
-  .btn {
+  .orangeBtn {
     float: right;
     margin-left: 10px;
     min-width: 45px;
+    background: $primaryOrange !important;
+    color: white;
   }
 }
