--- a/src/css/_variables.scss
+++ b/src/css/_variables.scss
@@ -6,3 +6,4 @@ $thirdGrey: rgb(49, 70, 91);
 $loginGrey: rgba(49, 70, 91, 0.7);
 $detailsGrey: #e9e6e6;
 $detailsGreen: #50b648;
+$detailsRed: #da1b1b;
