--- a/src/app/main/dataform/dataform.component.html
+++ b/src/app/main/dataform/dataform.component.html
@@ -4,24 +4,28 @@
       <div id="datosUser" class="boxContainer shadow">
         <h4>Añadir movimiento</h4>
         <div class="row ">
-          <form class="dataForm">
-            <input autofocus type="name" id="dataName" class="form-control" [(ngModel)]="dataName" 
+          <form #dataForm="ngForm" class="dataForm" (ngSubmit)="onSubmit(dataForm)">
+            <input autofocus type="name" id="dataName" class="form-control" [(ngModel)]="movement.name" 
               name="dataName" placeholder="Descripción gasto" required>
+
             <input type="number" id="dataAmount" class="form-control col-md-4 col-xs-12" 
-              [(ngModel)]="dataAmount" name="dataAmount" placeholder="Cantidad €" required>
-            <input type="date" [(ngModel)]="dataDate" value="dataDate" 
+              [(ngModel)]="movement.amount" name="dataAmount" placeholder="Cantidad €" required>
+
+            <input type="date" [(ngModel)]="movement.created_at" value="dataDate" 
             class="form-control col-md-4 col-xs-12" id="dateId" name="dataDate" required> 
-            <select name="category" id="dataCategory" class="form-control" required>
-              <option *ngFor="let category of categories" [ngValue]="category"> {{ category.name }} </option>
+
+            <select *ngIf="categories" name="category" id="dataCategory" class="form-control" [(ngModel)]="movement.category" required>
+                <option *ngFor="let category of categories" [ngValue]="category._id">{{ category.name }}</option>
             </select>
-            <select name="account" id="dataAccount" class="form-control" required>
-                <option *ngFor="let account of accounts" [ngValue]="account"> {{ account.name }} </option>
+
+            <select name="account" id="dataAccount" class="form-control" [(ngModel)]="movement.account" required>
+                <option *ngFor="let account of accounts" [ngValue]="account._id"> {{ account.name }} </option>
             </select>
+
+            <input type="submit" class="btn btn-primary formBtn pull-right" value="Guardar" [disabled]="!dataForm.form.valid">
+            
           </form>
         </div>
-        <div class="btn-right">
-          <button class="btn btn-primary formBtn">Guardar</button>
-        </div> 
       </div>
   </main>
 </div>
