--- a/src/app/main/home/home.component.html
+++ b/src/app/main/home/home.component.html
@@ -1,5 +1,5 @@
-<div>
-    <div *ngFor="let account of accounts" class="col-lg-12">
+<div class="row">
+    <div *ngFor="let account of accounts" class=" col-md-12 col-lg-6">
         <app-acc [account]="account"></app-acc>    
     </div>
 </div>
