--- a/src/app/main/home/acc/acc.component.html
+++ b/src/app/main/home/acc/acc.component.html
@@ -1,11 +1,13 @@
-<div class="row" style="margin-left: 0px; margin-right: 0px;">
-  <div class="boxContainer shadow col-md-12 col-lg-5">
-      <h4>{{ account.name}}</h4> 
-
-      <h5>Últimos movimientos:</h5>
-      <div *ngFor="let movement of movements">
-          {{ movement.name }} - {{ movement.amount}}
-          <br>
-      </div>
-  </div>
+<div class="boxContainer shadow">
+    <div class="headerContent row">
+        <h4 class="col-10">{{ account.name}}</h4>
+        <span class="pull-right negative col-2" [class.negative]="total < 0">{{total}} €</span> 
+    </div>  
+    
+    <div *ngFor="let movement of movements | slice:0:3;" class="bodyContent">
+        <div class="row movement">
+            <h6 class="col-md-9 col-xs-6">{{ movement.name }}</h6>
+            <span class="col-md-3 col-xs-6 negative" [class.negative]="movement.amount < 0">{{ movement.amount}} €</span> 
+        </div>  
+    </div>
 </div>
