--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -1,5 +1,8 @@
 @import "~bootstrap/scss/bootstrap-grid.scss";
 
+main{
+    padding-bottom: 55px;
+}
 .row{
     background-image: url("/assets/backgroundmain.jpg");
     background-repeat: no-repeat, repeat;
@@ -7,7 +10,7 @@
     position: absolute;
     background-attachment: fixed;
     width: 100%;   
-    height: 100%;
+    min-height: 100%;
 }
 
 .content.active
