--- a/src/app/main/stats/stats.component.html
+++ b/src/app/main/stats/stats.component.html
@@ -1,3 +1,3 @@
 <div class="row" style="margin-left: 0px; margin-right: 0px;">
-    <div class="boxContainer shadow">HOLA QUE PASA stats</div>
+    <div class="boxContainer shadow">En construcción</div>
 </div>
