--- a/src/app/main/dataform/dataform.component.html
+++ b/src/app/main/dataform/dataform.component.html
@@ -3,20 +3,41 @@
   <main role="main" class="col-md-8">
       <div id="datosUser" class="boxContainer shadow">
         <h4>Añadir movimiento</h4>
-        <div class="row ">
+        <div class="col">
           <form #dataForm="ngForm" class="dataForm" (ngSubmit)="onSubmit(dataForm)">
             <input autofocus type="name" id="dataName" class="form-control" [(ngModel)]="movement.name" 
-              name="dataName" placeholder="Descripción gasto" required>
+              name="dataName" placeholder="Descripción del movimiento" required>
 
             <input type="number" id="dataAmount" class="form-control col-md-4 col-xs-12" 
               [(ngModel)]="movement.amount" name="dataAmount" placeholder="Cantidad €" required>
 
             <input type="date" [(ngModel)]="movement.created_at" value="dataDate" 
             class="form-control col-md-4 col-xs-12" id="dateId" name="dataDate" required> 
-
-            <select *ngIf="categories" name="category" id="dataCategory" class="form-control" [(ngModel)]="movement.category" required>
-                <option *ngFor="let category of categories" [ngValue]="category._id">{{ category.name }}</option>
+            
+            <div class="col-md-12">
+              <label class="switch row">
+                <input type="checkbox" [(ngModel)]="branch" name="branch" val-default="false">
+                <span class="slider round form-control"></span>                
+              </label>
+              <span *ngIf="branch" class="tag">Ingreso</span>
+              <span *ngIf="!branch" class="tag">Gasto</span>
+            </div>
+            
+            <select *ngIf="branch" name="category" class="form-control" [(ngModel)]="movement.category" required>
+                  <option *ngFor="let category of incomes" [ngValue]="category._id">
+                    <span *ngIf="category.branch == branch">
+                        {{ category.name }}
+                    </span>
+                  </option>
             </select>
+
+            <select *ngIf="!branch" name="category" class="form-control" [(ngModel)]="movement.category" required>
+                <option *ngFor="let category of expenses" [ngValue]="category._id">
+                  <span *ngIf="category.branch == branch">
+                      {{ category.name }}
+                  </span>
+                </option>
+          </select>
 
             <select name="account" id="dataAccount" class="form-control" [(ngModel)]="movement.account" required>
                 <option *ngFor="let account of accounts" [ngValue]="account._id"> {{ account.name }} </option>
